<resources>
    <string name="app_name">Chatsta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="session_expired">Session Expired</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="gender">Gender</string>
    <string name="relationship_status">Relationship status</string>
    <string name="star_sign">Star sign</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="create_password">Create Password</string>
    <string name="create_pin">Create Pin</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_enter_your_pin">Or enter your PIN</string>
    <string name="log_in">Log In</string>
    <string name="location">Location</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="forgot_pwd_screen_info_text">No problem!\n\nJust enter the Email address you’ve used to register with us and we’ll send you a reset link</string>
    <string name="email_id">Email ID</string>
    <string name="get_reset_link">Get Reset Link</string>
    <string name="return_to">Return to</string>
    <string name="check_your_email">Check your email</string>
    <string name="sent_pwd_recover_link_txt">We have sent a password recover instruction to your entered email</string>
    <string name="signup_terms_conditions_txt">Creating an account means you are accepting our Terms and Conditions and Privacy Policy.</string>
    <string name="create_account">Create account</string>
    <string name="skip">Skip</string>
    <string name="continue_txt">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success!</string>
    <string name="your_account_has_been_created">Your account has been created!</string>
    <string name="you_have_3_complimentary">You have 3 complimentary</string>
    <string name="complete_my_profile">Complete My Profile</string>
    <string name="what_s_your_name">What’s your name?</string>
    <string name="this_is_how_it_will_appear_in_your_chatsta_profile_you_will_be_able_to_edit_this_later">This is how it will appear in your Chatsta profile. You will be able to edit this later.</string>
    <string name="next">Next</string>
    <string name="location_hint">Type your location</string>
    <string name="your_email_and_location">Your email and location</string>
    <string name="email_location_info_text">If you don’t provide your email you won’t be able to reset your password.</string>
    <string name="add_photos">Add photos</string>
    <string name="add_photos_info_txt">Add profile image and 4 additional photos. Photos burns after 1 month, so keep it updated!</string>
    <string name="click_here_upload_main_photo">Click here upload main photo</string>
    <string name="more_about_you">More about you</string>
    <string name="more_about_you_info_text">Let everyone know more about you.</string>
    <string name="your_bio">Your Bio</string>
    <string name="forgot_your_pin">Forgot your PIN?</string>
    <string name="use_password">Use Password</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_photo">Are you sure you want to delete this photo?</string>
    <string name="are_you_sure_you_want_to_delete_this_video">Are you sure you want to delete this video?</string>
    <string name="are_you_sure_you_want_to_delete_this_audio">Are you sure you want to delete this audio?</string>
    <string name="are_you_sure_you_want_to_delete_this_file">Are you sure you want to delete this file?</string>
    <string name="are_you_sure_you_want_to_delete_this_emoji">Are you sure you want to delete this emoji?</string>
    <string name="are_you_sure_you_want_to_delete_this_sound_emoji">Are you sure you want to delete this sound emoji?</string>
    <string name="are_you_sure_you_want_to_delete_profile">Are you sure you want to delete your account permanently?  All messages will also be deleted. This cannot be undone.</string>
    <string name="are_you_sure_you_want_to_delete_chat">Are you sure you want to delete this conversation?</string>
    <string name="ok">Ok</string>
    <string name="please_wait">Please Wait</string>
    <string name="permission_required">Permission Required</string>
    <string name="app_settings">App Settings</string>
    <string name="please_note">Please note !</string>
    <string name="if_you_don_t_enter_your_email_in_profile_information_you_won_t_be_able_to_reset_your_password">If you don’t enter your email in profile information you won’t be able to reset your password.</string>
    <string name="create_your_pin">Create your PIN</string>
    <string name="enter_4_digits_pin_which_you_can_use_to_sign_in_to_your_account">Enter 4 digits PIN which you can use to sign in to your account</string>
    <string name="create">Create</string>
    <string name="skip_complete_profile_confirm_txt">Are you sure you want to close? Entered information on this page won’t be saved.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yahooo">Yahooo!</string>
    <string name="almost_done">Almost done</string>
    <string name="last_questions">Last questions</string>
    <string name="height">Height(cm)</string>
    <string name="quotes">Quotes</string>
    <string name="interest">Interest</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non-binary</string>
    <string name="single">Single</string>
    <string name="in_a_relationship">In a relationship</string>
    <string name="engaged">Engaged</string>
    <string name="married">Married</string>
    <string name="in_love">In love</string>
    <string name="actively_searching">Actively searching</string>
    <string name="in_a_civil_union">In a civil union</string>
    <string name="its_complicated">It’s complicated</string>
    <string name="divorced">Divorced</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="tap_to_choose">Tap to choose</string>
    <string name="err_enter_username">Please Enter UserName</string>
    <string name="err_enter_password">Please Enter Password</string>
    <string name="err_enter_email">Please Enter Email</string>
    <string name="err_enter_location">Please Enter Location</string>
    <string name="err_enter_valid_password">Password must contain at least 6 characters with one uppercase letter and one number.</string>
    <string name="err_enter_confirm_password">Please Enter Password again</string>
    <string name="err_password_not_match">Passwords don\'t match</string>
    <string name="err_enter_pin">Please Enter Pin</string>
    <string name="err_enter_valid_email">Please Enter Valid Email</string>
    <string name="err_enter_first_name">Please Enter First Name</string>
    <string name="err_enter_last_name">Please Enter Last Name</string>
    <string name="err_select_gender">Please select your gender</string>
    <string name="err_select_relationship_status">Please select your relationship status</string>
    <string name="err_select_star_sign">Please select your star sign</string>
    <string name="err_enter_bio">Please enter your bio</string>
    <string name="err_last_question">Please enter answers</string>
    <string name="err_select_height">Please select height</string>
    <string name="err_select_interest">Please select interest</string>
    <string name="err_enter_quotes">Please enter quotes</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="transactions">Transactions</string>
    <string name="membership">Membership</string>
    <string name="informative_pages">Informative Pages</string>
    <string name="sign_out">Sign Out</string>
    <string name="only_1_99">Only $1.99</string>
    <string name="unlimited">Unlimited</string>
    <string name="burner_messages">Burner Messages</string>
    <string name="scheduled_messages">Scheduled Messages</string>
    <string name="chatsta_reactions">Chatsta Reactions</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="buy">Buy</string>
    <string name="pin">Pin</string>
    <string name="private_account">Private Account</string>
    <string name="private_account_info">By making your profile private, only your friends can see your profile info, posts and message you.</string>
    <string name="request_to_be_paid_content_provider">Request To Be Paid Content Provider</string>
    <string name="permanently_delete_account">Permanently Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="change_pin">Change Pin</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="current_pin">Current Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="edit_profile">Edit profile</string>
    <string name="total_donated">Total donated</string>
    <string name="bio">Bio</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="enter">Enter</string>
    <string name="not_selected">Not Selected</string>
    <string name="please_select_atleast_one_image">Please select atleast one image</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_identity_has_been_verified_nset_your_new_password">Your identity has been verified.\nSet your new password</string>
    <string name="password_updated">Password updated</string>
    <string name="your_password_successfully_updated_nnow_you_can_login_with_your_new_password">Your password successfully updated!\nNow you can login with your new password</string>
    <string name="your_photos_here">Your photos here</string>
    <string name="messages_alert">Messages Alert</string>
    <string name="sounds_on_a_new_message">Sounds on a new message</string>
    <string name="vibration">Vibration</string>
    <string name="vibrate_on_new_message">Vibrate on new message</string>
    <string name="message_preview">Message Preview</string>
    <string name="show_message_preview_in_push_up_notifications">Show message preview in push up notifications</string>
    <string name="likes_on_your_timeline_posts">Likes on your timeline posts</string>
    <string name="receive_push_up_notification_when_someone_likes_your_post">Receive push up notification when someone likes your post</string>
    <string name="comments_on_your_timeline">Comments on your timeline</string>
    <string name="receive_push_up_notification_when_someone_comments_on_your_post">Receive push up notification when someone comments on your post</string>
    <string name="version">Version</string>
    <string name="_1_11">1.11</string>
    <string name="last_update">Last Update</string>
</resources>