<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_sign_up_success"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/success" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/your_account_has_been_created"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/subTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/you_have_3_complimentary" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/info_text_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_down_arrow"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/burner_messages" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/info_text_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_down_arrow"
                    android:drawablePadding="8dp"
                    android:text="@string/scheduled_messages" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/info_text_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_down_arrow"
                    android:drawablePadding="8dp"
                    android:text="@string/chatsta_reactions" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/info_text_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_down_arrow"
                    android:drawablePadding="8dp"
                    android:text="@string/sound_effects" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnContinue"
                style="@style/yellow_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:paddingHorizontal="30dp"
                android:text="@string/complete_my_profile" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSkip"
            style="@style/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:fontFamily="@font/poppins_regular"
            android:padding="10dp"
            android:text="@string/skip"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>