<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.tridhya.chatsta.design.viewModel.ForgotPasswordViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="70dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/forgot_pwd_screen_info_text"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <include
                layout="@layout/layout_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                app:titleText="@{@string/email_id}"
                app:value="@={viewModel.email}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnGetResetLink"
                style="@style/yellow_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:text="@string/get_reset_link" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llForgotPasswordSuccess"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/check_your_email" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/sent_pwd_recover_link_txt"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/return_to"
                android:textColor="@color/pale_purple" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginTxt"
                style="@style/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_horizontal"
                android:paddingHorizontal="3dp"
                android:paddingVertical="5dp"
                android:text="@string/log_in"
                android:textColor="@color/purple" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
