<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="70dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_password_updated" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/password_updated" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/your_password_successfully_updated_nnow_you_can_login_with_your_new_password"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnLogin"
                style="@style/yellow_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="90dp"
                android:text="@string/log_in" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
